[package]
name = "bitcoin-explorer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
rocket_cors = "0.6.0-alpha2"
serde = { version = "1.0.163", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4.17"
rust_decimal = { version = "1.29.1", features = ["serde"] }
bitcoincore-rpc = "0.16.0"
dotenv = "0.15.0"